'GSM' is Greg Sabino Mullane, greg@turnstep.com


Version ???


  - Spelling fix per CPAN bug #78168


Version 2.19.3  Released August 21, 2012 (git commit be018f10fdaf4163f98affcb7244046e8f47420d)

  - Fix bug in pg_st_split_statement causing segfaults
    (CPAN bug #79035)

  - Make sure table_info() and other functions use pg_tablespace_location() 
    instead of spclocation for Postgres servers 9.2 and greater. [GSM + others]


Version 2.19.2  Released March 12, 2012 (git commit 52c80cc795855af8bf93eb0c81c76bd6f07a5f70)

  - Fix errors when multiple same-named placeholders are used. [GSM]
    (CPAN bug #75713)


Version 2.19.1  Released March 10, 2012 (git commit db6f6da00467c7ea28d32c4df97e93ccc4d38f2b)

  - Fix crash when passing in an array with undefined elements. [GSM]


Version 2.19.0  Released March 9, 2012 (git commit 05ab092905ce6891ed83e173412ee70d6cdb8cb5)

  - Use proper formatting for warn() and croak() (CPAN bug #75642)
    [Niko Tyni]

  - Fix localized regex in test (CPAN bug #70759)

  - Fix for named placeholders (CPAN bug #70953) [Jan Pazdziora]

  - Various fixes to the array-marshalling code [Noah Misch, Mark 
    Stosberg, and David Christensen] (CPAN bug #58552)

  - Allow hi-bit chars in dollar-quoted identifiers 
    [David Christensen] (CPAN bug #73832)

  - Have do() return count for things such as CREATE TABLE .. AS SELECT
    Will only work on 9.0 or better. (CPAN bug #71073) [Pavel Stehule]

  - Better error message when trying to do things post-disconnect [GSM]

  - Always respect pg_server_prepare=0 by using PQexec not PQexecParams. [GSM]

  - Fix error in async docs (CPAN bug #72812)

  - Switch from subversion to git.
    git clone git://bucardo.org/dbdpg.git [GSM]

Version 2.18.1  Released May 9, 2011 (git commit 5ea7d91bf1704fe0cae06c49806055cb35207950)

  - Fix LANG testing issue [GSM] (CPAN bug #56705)

  - Fix bug when async commands issued immediately after a COPY. [GSM] (CPAN bug #68041)
